# grounded-reasoning

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PAPER.md  README.md  README.vi.md  SECURITY.md  pyproject.toml  requirements.txt  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  maintenance.yml  publish-mcp-registry.yml
docs/: integration.md  integration.vi.md
examples/: calibration_demo.py  conformal_demo.py  hallucination_demo.py  quickstart.ipynb  rag_pipeline_demo.py  self_grounded_demo.py
grounded_reasoning/: __init__.py  _version.py
grounded_reasoning/agent/: __init__.py  mcp_server.py  tool.py  verifier.py
grounded_reasoning/experiments/: agent_demo.py  clutrr_eval.py  conformal_llm_eval.py  drift_conformal_eval.py  edge_pruning_eval.py  edge_pruning_llm_eval.py  guard_cost_eval.py  guard_llm_eval.py  guard_llm_stress_eval.py  heterogeneous_path_calibration_eval.py  inference_eval.py  negative_selection_eval.py  nl_ontology_eval.py  normalization_calibration_eval.py  redundancy_conformal_eval.py  self_grounded_calibration_eval.py  self_grounded_eval.py  transitivity_calibration_eval.py
grounded_reasoning/reasoning/: __init__.py  abstract_inference.py  conformal_reasoning.py  edge_pruning.py  negative_selection.py  transitivity_calibration.py
grounded_reasoning/theory/: theorems.py
src/: __init__.py
src/agent/: __init__.py  mcp_server.py  tool.py  verifier.py
src/experiments/: agent_demo.py  clutrr_eval.py  conformal_llm_eval.py  guard_cost_eval.py  guard_llm_eval.py  inference_eval.py  nl_ontology_eval.py  self_grounded_eval.py
src/reasoning/: __init__.py  abstract_inference.py  composition_algebra.py  conformal_reasoning.py  horn.py  llm_client.py  operator_algebra.py  relation_spectrum.py
src/theory/: theorems.py
tests/: test_abstract_inference.py  test_agent.py  test_clutrr_solver.py  test_composition_conformal_regressions.py  test_conformal_llm.py  test_drift_conformal_eval.py  test_edge_pruning.py  test_examples.py  test_fuzz_regressions.py  test_guard_llm.py  test_guard_llm_stress.py  test_heterogeneous_path_calibration_eval.py  test_horn_composition.py  test_llm_client.py  test_llm_client_regressions.py  test_negative_selection.py  test_normalization_calibration_eval.py  test_operator_algebra.py  test_public_api.py  test_redundancy_conformal_eval.py  test_relation_spectrum.py  test_robustness.py  test_self_grounded.py  test_self_grounded_calibration_eval.py  test_spectrum_regressions.py  test_theorems.py  test_transitivity_calibration.py  test_transitivity_calibration_eval.py  test_world_builder_consistency.py
