[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "grounded-reasoning"
dynamic = ["version"]
description = "Zero-token, precision-guaranteed verifier for LLM/agent multi-hop relational reasoning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/ALEXaquarius/grounded-reasoning"
Repository = "https://github.com/ALEXaquarius/grounded-reasoning"
Paper = "https://github.com/ALEXaquarius/grounded-reasoning/blob/main/PAPER.md"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]            # MCP server (grounded_reasoning.agent.mcp_server)
dev = ["pytest>=8", "pytest-cov>=6", "ruff>=0.6"]

[project.scripts]
grounded-reasoning-mcp = "grounded_reasoning.agent.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.dynamic]
version = { attr = "grounded_reasoning._version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["grounded_reasoning*"]

[tool.ruff]
line-length = 100
target-version = "py311"

# The published library (grounded_reasoning.agent, .reasoning, .theory) is held
# to strict lint rules; research/experiment scripts use a looser style.
[tool.ruff.lint.per-file-ignores]
"grounded_reasoning/experiments/*" = ["E702", "E741", "E731", "E402", "F841"]
"tests/*" = ["E741", "F841", "E702"]
